--- a/.gitignore
+++ b/.gitignore
@@ -130,11 +130,14 @@ celerybeat.pid
 # Environments
 .env
 .venv
+.venv11
 env/
 venv/
+venv11/
 ENV/
 env.bak/
 venv.bak/
+venv11.bak/
 
 # Spyder project settings
 .spyderproject
